--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.PNG" rel="icon">
+  <link href="assets/img/apple-touch-icon.PNG" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -234,9 +234,9 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio1/portfolio-1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio1/portfolio-1.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio1/portfolio-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recognize, Eliminate, and Contact Trace (REaCT) Android"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio1/portfolio-1.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recognize, Eliminate, and Contact Trace (REaCT) Android"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -245,9 +245,9 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio1/portfolio-2.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio1/portfolio-2.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio1/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recognize, Eliminate, and Contact Trace (REaCT) Android"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio1/portfolio-2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recognize, Eliminate, and Contact Trace (REaCT) Android"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details1.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
