--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -78,35 +78,35 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-1.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-details-1.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-details-1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-details-2.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-details-2.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-details-3.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-details-3.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-details-4.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-details-4.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-details-5.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-details-5.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-details-6.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-details-6.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-details-7.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-details-7.PNG" alt="">
                 </div>
 
               </div>
