--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -80,22 +80,22 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-2.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-2.PNG" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-3.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-3.PNG" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-4.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-4.PNG" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-5.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-5.PNG" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-6.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-6.PNG" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio1/portfolio-7.png" alt="">
+                  <img src="assets/img/portfolio1/portfolio-7.PNG" alt="">
                 </div>
 
 
