--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.PNG" rel="icon">
-  <link href="assets/img/apple-touch-icon.PNG" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -54,6 +54,7 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#certificate" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certificate</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -97,9 +98,9 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>June 5, 1999</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+09468981095</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+639569907813</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mangaldan</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -140,7 +141,7 @@
                 <h3 class="resume-title">Address</h3>
               <ul>
                 <li>256 Malabago, Mangaldan, Pangasinan, Philippines</li>
-                <li>+639 46 898 1095(Smart)</li>
+                <li>+639 56 990 7813</li>
                 <li>joshualapore@gmail.com</li>
                 <li>joshlapore05@gmail.com</li>
               </ul>
@@ -174,10 +175,12 @@
               <ul>
                 <li>Web Development</li>
                 <li>Web Designing</li>
+                <li>Software Development</li>
                 <li>Troubleshooting</li>
+                <li>Project Management</li>
+                <li>Scrum</li>
                 <li>Excel</li>
                 <li>Research</li>
-                <li>ClickUp</li>
               </ul>
               <p><em> &nbsp;  </em></p>
             </div>
@@ -188,8 +191,12 @@
                 <li>HTML</li>
                 <li>PHP</li>
                 <li>CSS</li>
-                <li>MySQL </li>
-                <li>Adobe Photoshop </li>
+                <li>MySQL</li>
+                <li>Javascript</li>
+                <li>Python</li>
+                <li>Visual Studio</li>
+                <li>ClickUp</li>
+                <li>Adobe Photoshop</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -200,6 +207,7 @@
                 <li>Hard working </li>
                 <li>Flexibility </li>
                 <li>Trainability</li>
+                <li>Time Management</li>
                 <li>Highly Organized and Efficiently</li>
                 <li>Ability to work Independently or as a part of a Team</li>
                 
@@ -256,6 +264,47 @@
     </section><!-- End Portfolio Section -->
 
 
+
+<section id="certificate" class="portfolio section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Certificate</h2>
+          <p> </p>
+        </div>
+
+      <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+            </ul>
+        </div>
+      </div>
+
+
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certificate/certificate.PNG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/certificate/certificate.PNG"data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificate/diploma.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                
+              </div>
+            </div>
+          </div>
+
+     </section>
+
+
+
+
+
+
+
+
+
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -285,7 +334,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+639 46 898 1095(Smart)</p>
+                <p>+639 56 990 7813(Globe)</p>
               </div>
             </div>
       </div>
